2 opcion para perfil

--- a/perfil1.css
+++ b/perfil1.css
@@ -1,5 +1,5 @@
 .body{
-  background-color: rgb(156, 175, 33);
+  background-color: #CB6A1E;
 
 }
 
@@ -27,3 +27,4 @@ h1{
   color: rgb(0, 0, 0);
   text-align: center;
 }
+
